# testFastDDS

./: .gitignore  .gitmodules  CMakeLists.txt
config/: mainConf.json  publisherConf.json  subscriberConf.json
idl/: AvailableDataTypes.cpp  CMakeLists.txt  Message_1.idl  Message_2.idl  Report.idl  ReportTopic.idl  Reports.idl  message_1.idl  report.idl
idl/include/: AvailableDataTypes.h
publisher/: CMakeLists.txt
publisher/include/: DataGenerator.h  IDataConverter.h  IDataGenerator.h  IDataGeneratorFactory.h  IDataSource.h  ISignals.h  IWriter.h
publisher/src/: Application.cpp  Application.h  DataGenerator.cpp  DataGenerator.h  DataGeneratorFactory.cpp  DataGeneratorFactory.h  DataGeneratorFactory.hpp  Participant.cpp  Participant.h  ReaderReport.cpp  ReaderReport.h  Writer.h  Writer.hpp  WriterMsg1.cpp  WriterMsg1.h  main.cpp
publisher/src/impl/: DataGeneratorFactoryImpl.cpp  DataGeneratorFactoryImpl.h  DataGeneratorImpl.cpp  DataGeneratorImpl.h  DataSourceImpl.h  WriterImpl.h  WriterImpl.hpp  WriterMsg1_impl.cpp  WriterMsg1_impl.h  WriterMsg2_impl.cpp  WriterMsg2_impl.h  WriterMsg_impl.h
publisher/src/model/: DParticipantConfig.h  DWriterConfig.h
subscriber/: CMakeLists.txt
subscriber/include/: IReader.h
subscriber/src/: Application.cpp  Application.h  Participant.cpp  Participant.h  main.cpp
subscriber/src/impl/: ReaderImpl.h  ReaderImpl.hpp
subscriber/src/model/: DReaderConfig.h
utils/: CMakeLists.txt  ParserArgs.cpp  ParserArgs.h  ThreadBase.cpp  ThreadBase.h
